assets/css/styles.css
* {
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
}

body {
  font-size: 1.6rem;
  font-family: "Poppins", sans-serif;
  background: #fffaf5;
}

/* =================================================== Common ====================================================== */
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Sora", sans-serif;
}

input,
textarea,
select,
button {
  font-size: inherit;
  font-family: inherit;
}

.container {
  width: 1170px;
  max-width: calc(100%-48px); /* 48px là ước lượng */
  margin: 0 auto;
}

a {
  text-decoration: none;
}

.btn {
  --height: 56px;

  display: inline-block;
  min-width: 130px;
  height: var(--height);
  line-height: var(--height);
  border: 1px solid rgb(0, 9, 88, 0.7); /* đổi thành rgb thêm tham số alpha thay vì dùng opacity sẽ làm mờ cả chữ */
  border-radius: 99px;

  font-weight: 600;
  font-size: 1.4rem;
  text-align: center;
  color: #000958;
}

.btn {
  opacity: 0.9;
}

/* =================================================== Header ====================================================== */
.header {
  padding: 26px 0;
}

.header__inner {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.navbar__list {
  display: flex;
}

.header-action__link,
.navbar__link {
  padding: 8px 18px;
  font-weight: 500;
  font-size: 1.4rem;
  line-height: 1;
  color: #5e6085;
}

.navbar__link:hover {
  color: #000958;
  text-shadow: 1px 0 0 currentColor;
}

.header-action__btn {
  --height: 50px;

  min-width: 118px;
}

/* =================================================== Hero ====================================================== */
.hero {
  margin-top: 74px;
}

.hero__inner {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.hero__media {
  position: relative;
  display: flex;
  padding-bottom: 94px; /* Thêm vào để nội dung sau này nó chạm phần box trắng thay vì ảnh lớn */
}

.hero__img-wrap {
  position: relative;
  display: flex;
  align-items: flex-end;
  justify-content: center;
  width: 388px;
  height: 488px;
  background: #fe997b;
  border-radius: 16px;
  border: 3px solid #ffffff;
}

/* Ảnh nhỏ hơn không bị giãn ra và lớn hơn thì nó lại co lại nằm gọn trong khung  */
.hero__img {
  max-width: 100%;
  max-height: 100%;
  border-radius: inherit;
}

.hero__decor {
  position: absolute;
  z-index: -1;
}

.hero__decor-left {
  left: -58px;
  bottom: 10px;
}

.hero__decor-right {
  top: 16px;
  right: -42px;
}

.hero__img-wrap-small {
  align-self: flex-end; /* Có sử dụng flex thì đây là một flex item nên dùng được */
  width: 186px;
  height: 244px;
  margin: 0 0 -58px -24px; /* left ảnh lớn 135px + width 388px - left ảnh nhỏ 500px = 23px làm tròn 24px */
  border: 2px solid #f7dddf;
  background: #faa7ad;
}

.hero__list {
  position: absolute;
  left: 129px;
  bottom: 0; /* Tránh việc bị nội dung sau này thêm vào nó bị chui xuống bên dưới phần box trắng */
  width: 250px;
  height: 156px;
  padding: 18px 14px;
  background: #fff;
  box-shadow: -17px 14px 68px -4px #cfae8440;
  border-radius: 10px;
}

.hero-list-item {
  display: flex;
}

.hero-list-item__thumb {
  width: 40px;
  height: 40px;
  border-radius: 10px;
  background: #fec23f;
  object-fit: cover;
}

.hero-list-item__info {
  margin-left: 10px;
}

.hero-list-item__title {
  font-family: Sora, sans-serif;
  font-weight: 600;
  font-size: 1.4rem;
  line-height: 1;
  color: #181e52;
}

.hero-list-item__skeleton {
  margin-top: 7px;
  width: var(--width, 118px);
  height: 4px;
  color: #000958;
  border-radius: 10px;
  opacity: 0.08;
}

.hero-list-item__separate {
  display: block;
  width: 100%;
  height: 2px;
  margin: 20px 0;
  background: #f2f2f2;
  border-radius: 99px;
}

.hero-list-item:nth-of-type(2) .hero-list-item__thumb {
  background: #6597c2;
}

